--- a/Resources/resManifest.rc
+++ b/Resources/resManifest.rc
@@ -31,7 +31,7 @@ VS_VERSION_INFO VERSIONINFO
 		END
 		BLOCK "VarFileInfo"
 		BEGIN
-			VALUE "Translation", 0, 1200
+			VALUE "Translation", 0x0409, 1200
 		END
 	END
 /* End of Version info */
