--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,17 @@ jobs:
           host: 'windows'
           target: 'desktop'
           arch: 'win64_msvc2019_64'
+    - name: Get Tag version
+      id: get_version
+      shell: bash
+      run: echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}"
+    - name: Write CryToKey from Secrets to Headers files
+      id: crytokey
+      env:
+        CRYTOKEY: ${{ secrets.CRYTOKEY }}
+      run: |
+        ((Get-Content -Path .\configuration.h -Raw) -Replace "crytokey = 1596880491598749", "crytokey = ${env:CRYTOKEY}") | Set-Content -Path .\configuration.h
+        ((Get-Content -Path .\mainwindow.h -Raw) -Replace "crytokey = 1596880491598749", "crytokey = ${env:CRYTOKEY}") | Set-Content -Path .\mainwindow.h
     - name: Build x64 release GUI
       id: build_x64_release
       shell: cmd
@@ -36,7 +47,7 @@ jobs:
       with:
         tag_name: ${{ github.ref }}
         release_name: picta-dl-gui 
-        body: "Picta Downloader GUI ${{ github.ref }}"
+        body: "Picta Downloader GUI ${{ steps.get_version.outputs.VERSION }}"
         draft: false
         prerelease: false
     - name: Upload Executable Picta-dl_GUI.exe
