Linking the app to static version of Qt

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,8 +37,9 @@ jobs:
       shell: cmd
       run: |
         call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-        qmake
-        nmake release
+        nmake clean
+        qmake -config release
+        nmake
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
