--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,4 +34,5 @@ jobs:
         qmake TestPicta-dl_GUI.pro -spec win32-g++
         make -j 4
     - name: Run Tests
-      run: ./release/Picta-dl_GUI_Test.exe
+      shell: cmd
+      run: .\release\Picta-dl_GUI_Test.exe
