--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,10 @@ jobs:
         install: base-devel git mingw-w64-x86_64-toolchain mingw-w64-x86_64-qt5-static
         path-type: minimal
     - uses: actions/checkout@v2
+    - name: Get Tag version
+      id: get_version
+      shell: bash
+      run: echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}"
     - name: Write CryToKey from Secrets to Headers files
       id: crytokey
       env:
@@ -36,8 +40,24 @@ jobs:
         # GitHub runner dont execute (Tests) .exe?
         # make check
         make -j 4 release
-    - uses: actions/upload-artifact@v2
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: Picta-dl_GUI_Test.exe
-        path: 'release/Picta-dl_GUI_Test.exe'
-        if-no-files-found: error
+        tag_name: ${{ github.ref }}
+        release_name: picta-dl-gui_test
+        body: "[Tests] Picta Downloader GUI ${{ steps.get_version.outputs.VERSION }}"
+        draft: false
+        prerelease: false
+    - name: Upload Executable Picta-dl_GUI_Test.exe
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./release/Picta-dl_GUI_Test.exe
+        asset_name: Picta-dl_GUI_Test.exe
+        asset_content_type: application/octet-stream
