--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,6 +85,12 @@ jobs:
       run: |
         VERSION=`./get-version.sh`
         echo "::set-output name=version::$VERSION"
+    - name: Dump Package Name
+      id: dump_package_name
+      env:
+        DEB_VERSION: ${{ steps.dump_version.outputs.version }}
+      run: |
+        echo "::set-output name=deb_name::picta-dl-gui_$DEB_VERSION-1_amd64.deb"
     - name: Upload Package Binary Distribution to Release
       id: upload-release-binary
       uses: actions/upload-release-asset@v1
@@ -92,16 +98,15 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.build_windows_exe.outputs.upload_url }}
-        asset_path: ./picta-dl-gui_${{ steps.dump_version.version }}-1_amd64.deb
-        asset_name: picta-dl-gui_${{ steps.dump_version.version }}-1_amd64.deb
+        asset_path: ${{ steps.dump_package_name.outputs.deb_name }}
+        asset_name: ${{ steps.dump_package_name.outputs.deb_name }}
         asset_content_type: application/octet-stream
     - name: Get SHA2-256SUMS for .deb
       id: sha2_deb
       env:
-        DEB_VERSION: ${{ steps.dump_version.version }}
+        DEB_NAME: ${{ steps.dump_package_name.outputs.deb_name }}
       run: |
-        DEB_FILE="picta-dl-gui_$DEB_VERSION-1_amd64.deb"
-        SHA2=`sha256sum $DEB_FILE`
+        SHA2=`sha256sum $DEB_NAME`
         echo "::set-output name=sha2_linux::$SHA2"
     - name: Make SHA2-256SUMS file
       env:
