--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Depends
       run: sudo apt-get -y install build-essential g++ qt5-default qt5-qmake qtbase5-dev qtbase5-dev-tools dh-make devscripts fakeroot pbuilder
+    - name: Write CryToKey from Secrets to Headers files
+      id: crytokey
+      env:
+        CRYTOKEY: ${{ secrets.CRYTOKEY }}
+      run: |
+        sed -i -r "s/crytokey = ([0-9]+)/crytokey = ${CRYTOKEY}/" configuration.h mainwindow.h
     - name: Build Debian Package
       run: |
         chmod +x ./get-version.sh
