--- a/deployment/linux/debian/control
+++ b/deployment/linux/debian/control
@@ -1,5 +1,5 @@
 Source: _NAME_
-Section: unknown
+Section: net
 Priority: optional
 Maintainer: _MAINTAINER_ <_EMAIL_>
 Build-Depends: debhelper (>= 9)
