--- a/deployment/qtifw/packages/cu.pictadl.gui/meta/package.xml
+++ b/deployment/qtifw/packages/cu.pictadl.gui/meta/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package>
-    <DisplayName>Picta-DL-GUI</DisplayName>
+    <DisplayName>Picta DL GUI</DisplayName>
     <Description>Picta Downloader GUI</Description>
     <Version>0.12.17</Version>
     <ReleaseDate>2021-02-15</ReleaseDate>
@@ -9,4 +9,5 @@
         <License name="License Agreement" file="LICENSE" />
     </Licenses>
     <Default>true</Default>
+    <SortingPriority>30</SortingPriority>
 </Package>
