Add Shortcut and RunProgram to installer Offline

--- a/deployment/windows/packages/cu.pictadl.gui/meta/package.xml
+++ b/deployment/windows/packages/cu.pictadl.gui/meta/package.xml
@@ -9,5 +9,6 @@
         <License name="License Agreement" file="LICENSE" />
     </Licenses>
     <Default>true</Default>
+    <Script>installscript.qs</Script>
     <SortingPriority>30</SortingPriority>
 </Package>
