--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -126,6 +126,14 @@
             "options": {
                 "cwd": "${workspaceFolder}"
             }
+        },
+        {
+            "label": "Format Clang",
+            "type": "shell",
+            "command":"find . -regex '.*\\.\\(cpp\\|hpp\\|c\\|h\\)' -exec clang-format-7 -style=file -i {} \\;",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
         }
     ]
 }
